--- a/content/resources/1.md
+++ b/content/resources/1.md
@@ -4,6 +4,7 @@ description: Excerpt from the course textbook on Dimensions, Free fall, Integrat
   Taylor and MacLaurin series, and Cheap differentiation.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/fc00fda4fa6d39df205bedb0141efac0_1.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 1.pdf
 uid: fc00fda4-fa6d-39df-205b-edb0141efac0
