--- a/content/resources/1q.md
+++ b/content/resources/1q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Questions from lecture 1 on Dimensions.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/9335ae230bd29ea458251d747fb3091b_1q.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 1q.pdf
 uid: 9335ae23-0bd2-9ea4-5825-1d747fb3091b
