--- a/content/resources/3.md
+++ b/content/resources/3.md
@@ -5,6 +5,7 @@ description: Excerpt from the course textbook on Discretization, Exponential dec
   formula, and Pendulum period.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/eacc3543cfbc472faa4908aa2ed96140_3.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 3.pdf
 uid: eacc3543-cfbc-472f-aa49-08aa2ed96140
