--- a/content/resources/3q.md
+++ b/content/resources/3q.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Questions from lecture 3 on Drag, Easy cases, Dimensions, and Statements.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/30c048a78c443ad583f5bfbec74083a9_3q.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 3q.pdf
 uid: 30c048a7-8c44-3ad5-83f5-bfbec74083a9
