--- a/content/resources/4.md
+++ b/content/resources/4.md
@@ -5,6 +5,7 @@ description: Excerpt from the course textbook on Picture Proofs, Adding odd numb
   and Summing series.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/5cd29a2b6d8051e77f6d0bf18a68fb1a_4.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 4.pdf
 uid: 5cd29a2b-6d80-51e7-7f6d-0bf18a68fb1a
