--- a/content/resources/5.md
+++ b/content/resources/5.md
@@ -5,6 +5,7 @@ description: Excerpt from the course textbook on Taking out the big part, Multip
   Extreme cases, and a Daunting integral.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/95cba0d987ca7970a45f0d062e8d2493_5.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 5.pdf
 uid: 95cba0d9-87ca-7970-a45f-0d062e8d2493
