--- a/content/resources/6.md
+++ b/content/resources/6.md
@@ -4,6 +4,7 @@ description: Excerpt from the course textbook on Analogy, Tetrahedral bond angle
   and Steiner?s plane problem.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/c1b983629a81757e2577f414a7d0a8a8_6.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 6.pdf
 uid: c1b98362-9a81-757e-2577-f414a7d0a8a8
