--- a/content/resources/7.md
+++ b/content/resources/7.md
@@ -4,6 +4,7 @@ description: Excerpt from the course textbook on Operators, the Derivative opera
   Fun with derivatives, Summation, Euler sum, and concluding remarks.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-098-street-fighting-mathematics-january-iap-2008/b06f077c4c7c859967e5c51e47af21ff_7.pdf
 file_type: application/pdf
+parent_uid: 1920b094-8f7f-7777-7a7a-afdf0a1110f1
 resourcetype: Document
 title: 7.pdf
 uid: b06f077c-4c7c-8599-67e5-c51e47af21ff
